# object-detection

./: .gitignore
aircraft-detection/: README.md  app.py
aircraft-detection/notebooks/: train_aircraft_yol0v8.ipynb  train_aircraft_yolo11-Copy1.ipynb  train_aircraft_yolo11.ipynb  train_aircraft_yolov8.ipynb
car-detection/: IMPLEMENTATION_COMPLETE.md  PROJECT_STRUCTURE.md  QUICK_START_GUIDE.txt  README.md  VERIFICATION_CHECKLIST.md  requirements-dev.txt  requirements.txt  setup.sh
car-detection/config/: car_data.yaml
car-detection/docs/: ARCHITECTURE.md  COMPLETION_SUMMARY.md  CONFIG_REFERENCE.md  DEVELOPMENT.md  README.md  USAGE.md
car-detection/jupyter/: car_detection_YOLOv8n.ipynb
car-detection/src/: __init__.py  evaluate.py  predict_model.py  prepare_data.py  train_model.py  utils.py
docs/examples/: water_detection.ipynb  water_detection1.ipynb
sentinel2-yolo-aircraft/: .gitignore  README.md  SENTINEL2_DATA_SOURCES.md  SENTINEL2_MIGRATION.md  pyproject.toml  requirements.txt  setup.py
sentinel2-yolo-aircraft/data/: data.yaml
sentinel2-yolo-aircraft/notebooks/: inference_notebook.ipynb  training_notebook.ipynb
sentinel2-yolo-aircraft/scripts/: download_sentinel2.py  export_onnx.py  infer_scene.py  train.py
sentinel2-yolo-aircraft/sentinel2_yolo/: __init__.py  dataset.py  inference.py  tiling.py  utils.py
trees-detection/: .gitignore  README.md  requirements-dev.txt  requirements.txt  setup.sh
trees-detection/config/: tree_data.yaml
trees-detection/docs/: ARCHITECTURE.md  COMPLETION_SUMMARY.md  CONFIG_REFERENCE.md  DEVELOPMENT.md  INDEX.md  (+2 more)
(+12 files in other folders)
