[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel2-yolo-aircraft"
version = "0.1.0"
authors = [
{ name="Your Name", email="[you@example.com](mailto:you@example.com)" }
]
description = "Aircraft detection in Sentinel-2 imagery using YOLO models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"ultralytics==8.1.0",
"rasterio==1.3.8",
"numpy==1.26.4",
"opencv-python==4.9.0.80",
"shapely==2.0.3",
"geopandas==0.14.1",
"matplotlib==3.8.2",
"tqdm==4.66.1",
"pyproj==3.6.1"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "flake8"]
onnx = ["onnx", "onnxruntime"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel2_yolo"]
